Updates to address player concerns with UI rework. Sidebar elements scale with card size, sidebar is friendly to ~1024x768. Characters appear more centrally. Strongholds won't wander as far to the right on super-wide displays. Row alignment changed to avoid overly tight spacing between characters and dynasty row. Removed checkbox for "stats in sidebar" since that is the only option now.

--- a/less/cards.less
+++ b/less/cards.less
@@ -5,10 +5,12 @@
   &.at-home {
     order:2;
     &.conflict{ 
-      margin-top:20px;
-      order:1;
-      &.is-mine {
-        margin-top:-20px;
+      &.activeCombatant {
+        margin-top:20px;
+        order:1;
+        &.is-mine {
+          margin-top:-20px;
+        }
       }
     }
   }
